--- a/scss/toolbar.theme.scss
+++ b/scss/toolbar.theme.scss
@@ -206,9 +206,6 @@
                 border: 0;
                 border-bottom: 1px solid rgba($toolbar-tray-link-color, .05);
 
-                &:first-child {
-                    border: 0;
-                }
                 &:last-child {
                     border: 0;
                 }
